[package]
name = "raug-client-lua"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
convert_case = "0.8.0"
mlua = { version = "0.10.3", features = [
    "lua54",
    "vendored",
    "send",
    "anyhow",
    "macros",
    "async",
] }
raug = { path = "../raug" }
raug-ext = { path = "../raug-ext" }
raug-server = { path = "../raug-server" }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
env_logger = "0.11.8"
# full_moon = { version = "2.0.0", default-features = false, features = [
#     "lua52",
#     "lua53",
#     "lua54",
# ] }
rustc-hash = "2.1.1"
raug-graph = { path = "../raug-graph" }